--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
+.navbar {
+  @apply px-4 py-2 justify-between flex-wrap;
+}
+@screen md {
+  .navbar {
+    @apply px-2;
+  }
+}
 @tailwind utilities;
